Ultimos retoques + responsive

--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@ POSTGRES_DATABASE="verceldb"
 # Login Variables
 NEXTAUTH_SECRET="unaClave24*"
 NEXTAUTH_URL="http://localhost:3000"
-# Variables Produccion
+# Variables Produccion esta variable no va en vercel y hay que desbloquera los accesos a la pagina desde seguridad
 NEXTAUTH_URL_PROD="https://distribuciones-myd.vercel.app/"
