--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "debounce": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "pg": "^8.12.0",
